# hoopsfactory-downloader

./: .env.template  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: versioning.yaml
