[tool.poetry]
name = "hoopsfactory-downloader"
version = "0.1.0"
description = "A script to automatically download videos from HoopsFactory for a specific day"
authors = ["Marc <marc@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
playwright = "^1.40.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hoopsfactory-downloader = "hoopsfactory_downloader:main"
